fixed spacing for photo gallery and footer

--- a/sprint-one/styles/global.css
+++ b/sprint-one/styles/global.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    /* border: 1px dashed grey; */
+    border: 1px dashed grey;
 }
 
 body {
